<resources>
    <string name="app_name">Bismillah Zakat MVVM</string>
    <string name="materi">Materi Zakat</string>
    <string name="latihan">Soal Latihan</string>
    <string name="kalkulator">Kalkulator Zakat</string>
    <string name="tentang">Tentang Aplikasi</string>
    <string name="fitrah">Zakat Fitrah</string>
    <string name="zakatemas">Zakat Emas</string>
    <string name="zakatperak">Zakat Perak</string>
    <string name="zakatperniagaan">Zakat Perniagaan</string>
    <string name="zakatpertanian">Zakat Pertanian</string>
    <string name="zakattemuan">Zakat Barang Temuan</string>
    <string name="zakatberhargalain">Zakat Barang Berharga Lain</string>
    <string name="zakatprofesi">Zakat Profesi</string>
    <string name="zakattambang">Zakat Barang Tambang</string>
    <string name="hitung">HITUNG</string>
    <string name="ulang">ULANG</string>
    <string name="zakatdagang">Zakat Perdagangan</string>
    <string name="zakat_hewan_ternak">Zakat Hewan Ternak</string>
    <string name="jenis_hewan">Jenis Hewan</string>
    <string name="sapi_kerbau">Sapi/Kerbau</string>
    <string name="kambing">Kambing</string>
    <string name="unta">Unta</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="nishab_zakat">Nishab Zakat</string>
    <string name="waktu_pelaksanaan_zakat">Waktu Pelaksanaan Zakat</string>
    <string name="besar_zakat">Besar Zakat</string>
    <string name="contoh_perhitungan_zakat">Contoh Perhitungan Zakat</string>
    <string name="skor_akhir">SKOR AKHIR</string>
    <string name="_setNol">0</string>
    <string name="cek">CEK JAWABAN</string>
    <string name="next">SELANJUTNYA</string>
    <string name="tidak_wajib_zakat">Anda tidak wajib membayar zakat karena harta yang dimiliki belum mencapai nisab atau haul</string>
    <string name="gandum">Gandum</string>
    <string name="beras">Beras</string>
    <string name="jagung">Jagung</string>
    <string name="proses_pengairan">Proses Pengairan</string>
    <string name="zakat_rikaz">Zakat Rikaz / Barang Temuan</string>
    <string name="harga_jual">Harga jual barang</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_gagal">Login Gagal. Username dan Password salah.</string>
    <string name="profil_user">Profil User</string>
    <string name="log_out">Log Out</string>
</resources>
