<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.izzatul.bismillahzakatmvvm.kalkulator.view.HitungZakatHewanTernakActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- JUDUL ZAKAT -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zakat_hewan_ternak"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"
            android:gravity="center"/>

        <!-- PILIHAN HEWAN TERNAK -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_hewan"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>
        <RadioButton
            android:id="@+id/rb_unta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/unta" />
        <RadioButton
            android:id="@+id/rb_sapi_kerbau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/sapi_kerbau" />
        <RadioButton
            android:id="@+id/rb_kambing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/kambing" />

        <!-- JUMLAH HEWAN TERNAK -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/jumlah_hewan"
                    android:hint="Jumlah hewan ternak"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/reset_jumlah_hewan"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <!-- HASIL PERHITUNGAN -->
        <TextView
            android:id="@+id/hasil_hitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:hint="Hasil perhitungan"
            android:paddingBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />

        <!-- TOMBOL HITUNG DAN ULANG -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_hitung"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/hitung"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_ulang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:text="@string/ulang"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
